Code check and formatting on Linear Assumptions notebook and script

--- a/jupyter_notebooks/Linear Assumptions (R).ipynb
+++ b/jupyter_notebooks/Linear Assumptions (R).ipynb
@@ -4,502 +4,121 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### R Notebook for checking linear assumptions \n",
+    "### Checking Linear Assumptions\n",
     "\n",
-    "Script will output residual error plots (Residuals vs Fitted, Residuals vs Leverage, QQ Plot, Cooks) to local folder"
+    "This is an R notebook created to assess linear assumptions in our merged dataset, which is comprised of extracted NDRE data, soil properties, weather and soil moisture (the latter being our response variable).  \n",
+    "\n",
+    "The output of the scrip is residual error plots (Residuals vs Fitted, Residuals vs Leverage, QQ Plot, Cooks) to a local folder in the repository (for easier viewing)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Samir Patel\n",
-    "\n",
-    "1-17-2018\n",
-    "\n",
-    "v0"
+    " "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importing data"
+    "#### Importing Merged Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ndre_data <- read.csv(\"C:/Users/Samir Patel/Desktop/Data 590 - Capstone I/HydroSatML/data/final_join_subbed_bare_soil_40.csv\")"
+    "# Set path to the main repository folder\n",
+    "setwd('C:/Users/Samir Patel/desktop/Data 590 - Capstone I/HydroSatML/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "colList <- names(ndre_data)        "
+    "# Opening merged data set\n",
+    "\n",
+    "ndre_data <- read.csv(\"./data/final_join_subbed_bare_soil_with_lag_40_EXACT_NDRE.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<ol class=list-inline>\n",
-       "\t<li>'field'</li>\n",
-       "\t<li>'average_adjacent'</li>\n",
-       "\t<li>'stdev_adjacent'</li>\n",
-       "\t<li>'sensor'</li>\n",
-       "\t<li>'date'</li>\n",
-       "\t<li>'sensor_full_name'</li>\n",
-       "\t<li>'depth_1'</li>\n",
-       "\t<li>'depth_2'</li>\n",
-       "\t<li>'depth_3'</li>\n",
-       "\t<li>'precip.cm'</li>\n",
-       "\t<li>'tair.C'</li>\n",
-       "\t<li>'rh.pct'</li>\n",
-       "\t<li>'wind_sp.m_per_s'</li>\n",
-       "\t<li>'irradiance.w_per_m.2'</li>\n",
-       "\t<li>'year'</li>\n",
-       "\t<li>'sand_1'</li>\n",
-       "\t<li>'sand_2'</li>\n",
-       "\t<li>'sand_3'</li>\n",
-       "\t<li>'silt_1'</li>\n",
-       "\t<li>'silt_2'</li>\n",
-       "\t<li>'silt_3'</li>\n",
-       "\t<li>'clay_1'</li>\n",
-       "\t<li>'clay_2'</li>\n",
-       "\t<li>'clay_3'</li>\n",
-       "\t<li>'avg_soilM'</li>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 'field'\n",
-       "\\item 'average\\_adjacent'\n",
-       "\\item 'stdev\\_adjacent'\n",
-       "\\item 'sensor'\n",
-       "\\item 'date'\n",
-       "\\item 'sensor\\_full\\_name'\n",
-       "\\item 'depth\\_1'\n",
-       "\\item 'depth\\_2'\n",
-       "\\item 'depth\\_3'\n",
-       "\\item 'precip.cm'\n",
-       "\\item 'tair.C'\n",
-       "\\item 'rh.pct'\n",
-       "\\item 'wind\\_sp.m\\_per\\_s'\n",
-       "\\item 'irradiance.w\\_per\\_m.2'\n",
-       "\\item 'year'\n",
-       "\\item 'sand\\_1'\n",
-       "\\item 'sand\\_2'\n",
-       "\\item 'sand\\_3'\n",
-       "\\item 'silt\\_1'\n",
-       "\\item 'silt\\_2'\n",
-       "\\item 'silt\\_3'\n",
-       "\\item 'clay\\_1'\n",
-       "\\item 'clay\\_2'\n",
-       "\\item 'clay\\_3'\n",
-       "\\item 'avg\\_soilM'\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 'field'\n",
-       "2. 'average_adjacent'\n",
-       "3. 'stdev_adjacent'\n",
-       "4. 'sensor'\n",
-       "5. 'date'\n",
-       "6. 'sensor_full_name'\n",
-       "7. 'depth_1'\n",
-       "8. 'depth_2'\n",
-       "9. 'depth_3'\n",
-       "10. 'precip.cm'\n",
-       "11. 'tair.C'\n",
-       "12. 'rh.pct'\n",
-       "13. 'wind_sp.m_per_s'\n",
-       "14. 'irradiance.w_per_m.2'\n",
-       "15. 'year'\n",
-       "16. 'sand_1'\n",
-       "17. 'sand_2'\n",
-       "18. 'sand_3'\n",
-       "19. 'silt_1'\n",
-       "20. 'silt_2'\n",
-       "21. 'silt_3'\n",
-       "22. 'clay_1'\n",
-       "23. 'clay_2'\n",
-       "24. 'clay_3'\n",
-       "25. 'avg_soilM'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       " [1] \"field\"                \"average_adjacent\"     \"stdev_adjacent\"      \n",
-       " [4] \"sensor\"               \"date\"                 \"sensor_full_name\"    \n",
-       " [7] \"depth_1\"              \"depth_2\"              \"depth_3\"             \n",
-       "[10] \"precip.cm\"            \"tair.C\"               \"rh.pct\"              \n",
-       "[13] \"wind_sp.m_per_s\"      \"irradiance.w_per_m.2\" \"year\"                \n",
-       "[16] \"sand_1\"               \"sand_2\"               \"sand_3\"              \n",
-       "[19] \"silt_1\"               \"silt_2\"               \"silt_3\"              \n",
-       "[22] \"clay_1\"               \"clay_2\"               \"clay_3\"              \n",
-       "[25] \"avg_soilM\"           "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "colList"
+    "# Retrieving list of columns in dataset\n",
+    "\n",
+    "col_list <- names(ndre_data)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_list"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Full LM model with all variables"
+    "#### Full LM model with all variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model1 <- lm(avg_soilM ~ ., data = ndre_data)\n",
-    "#model1"
+    "model_1 <- lm(avg_soilM ~ ., data = ndre_data)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "List of various bivariate linear regression models (soil moisture vs...)"
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### List of various bivariate linear regression models (soil moisture vs...)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "lm_list <- list()\n",
-    "t = 1\n",
+    "t <- 1\n",
     "\n",
-    "for (i in 1:(length(colList)-1)){\n",
+    "for (i in 1:(length(col_list) - 1)){\n",
     "\n",
-    "  Formula <- formula(paste(\"avg_soilM ~ \", colList[i]))\n",
+    "  Formula <- formula(paste(\"avg_soilM ~ \", col_list[i]))\n",
     "  lm_list[[t]] <- lm(Formula, data = ndre_data)\n",
-    "  t = t+1\n",
+    "  t <- t  + 1\n",
     "\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)       fieldJ      fieldOD       fieldW  \n",
-       "  0.2235377   -0.0313054    0.0004046   -0.0293347  \n",
-       "\n",
-       "\n",
-       "[[2]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "     (Intercept)  average_adjacent  \n",
-       "         0.25420          -0.08089  \n",
-       "\n",
-       "\n",
-       "[[3]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "   (Intercept)  stdev_adjacent  \n",
-       "       0.21290        -0.05046  \n",
-       "\n",
-       "\n",
-       "[[4]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)       sensor  \n",
-       "  0.2151747   -0.0004939  \n",
-       "\n",
-       "\n",
-       "[[5]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "   (Intercept)  date2012-06-15  date2012-06-25  date2012-07-06  date2012-07-10  \n",
-       "      0.297638       -0.024858       -0.025773       -0.036986       -0.067251  \n",
-       "date2012-07-13  date2012-07-15  date2012-07-25  date2012-07-31  date2012-08-04  \n",
-       "      0.007479       -0.057400       -0.050873       -0.119383       -0.113217  \n",
-       "date2013-06-06  date2013-06-08  date2013-06-15  date2013-06-27  date2013-06-29  \n",
-       "     -0.109296       -0.033741       -0.095234       -0.090438       -0.102793  \n",
-       "date2013-07-04  date2013-07-08  date2013-07-15  date2013-07-16  date2014-06-04  \n",
-       "     -0.093764       -0.102873       -0.108876       -0.098555       -0.057462  \n",
-       "date2014-06-19  date2014-06-30  date2014-07-07  date2014-07-08  date2014-07-11  \n",
-       "     -0.096850       -0.072787       -0.114090       -0.134800       -0.111696  \n",
-       "date2014-07-22  date2015-06-05  date2015-06-08  date2015-06-17  date2015-06-18  \n",
-       "     -0.157534       -0.078257       -0.088652       -0.111174       -0.112326  \n",
-       "date2015-06-19  date2016-06-30  \n",
-       "     -0.121112       -0.088063  \n",
-       "\n",
-       "\n",
-       "[[6]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "               (Intercept)      sensor_full_name A10-C  \n",
-       "                  0.210637                   -0.017603  \n",
-       "    sensor_full_name A11-C      sensor_full_name A12-C  \n",
-       "                  0.010151                    0.006277  \n",
-       "     sensor_full_name A2-C       sensor_full_name A3-C  \n",
-       "                 -0.021333                    0.041010  \n",
-       "     sensor_full_name A4-C       sensor_full_name A5-C  \n",
-       "                  0.063670                    0.007982  \n",
-       "     sensor_full_name A6-C       sensor_full_name A7-C  \n",
-       "                  0.026219                    0.040125  \n",
-       " sensor_full_nameJ1-C_hand  sensor_full_nameJ10-C_hand  \n",
-       "                  0.003610                   -0.061821  \n",
-       "sensor_full_nameJ11-C_hand  sensor_full_nameJ12-C_hand  \n",
-       "                 -0.023846                   -0.024203  \n",
-       " sensor_full_nameJ2-C_hand   sensor_full_nameJ4-C_hand  \n",
-       "                 -0.028232                   -0.001945  \n",
-       " sensor_full_nameJ5-C_hand   sensor_full_nameJ6-C_hand  \n",
-       "                 -0.004314                    0.055023  \n",
-       " sensor_full_nameJ7-C_hand   sensor_full_nameJ8-C_hand  \n",
-       "                 -0.034493                   -0.069625  \n",
-       "    sensor_full_nameOD-1_C     sensor_full_nameOD-10_C  \n",
-       "                  0.048820                    0.009650  \n",
-       "   sensor_full_nameOD-12_C      sensor_full_nameOD-2_C  \n",
-       "                  0.013629                    0.015676  \n",
-       "    sensor_full_nameOD-3_C      sensor_full_nameOD-4_C  \n",
-       "                  0.004888                   -0.017915  \n",
-       "    sensor_full_nameOD-6_C      sensor_full_nameOD-7_C  \n",
-       "                  0.013248                    0.010012  \n",
-       "    sensor_full_nameOD-9_C  sensor_full_nameW10-C_hand  \n",
-       "                  0.032166                    0.057295  \n",
-       "sensor_full_nameW12-C_hand   sensor_full_nameW3-C_hand  \n",
-       "                 -0.008165                   -0.055679  \n",
-       " sensor_full_nameW5-C_hand   sensor_full_nameW6-C_hand  \n",
-       "                 -0.033571                   -0.017199  \n",
-       " sensor_full_nameW8-C_hand  \n",
-       "                 -0.022849  \n",
-       "\n",
-       "\n",
-       "[[7]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)      depth_1  \n",
-       "     0.0219       0.9584  \n",
-       "\n",
-       "\n",
-       "[[8]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)      depth_2  \n",
-       "    0.02769      0.81425  \n",
-       "\n",
-       "\n",
-       "[[9]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)      depth_3  \n",
-       "    0.05806      0.58731  \n",
-       "\n",
-       "\n",
-       "[[10]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)    precip.cm  \n",
-       "     0.2137      -0.0990  \n",
-       "\n",
-       "\n",
-       "[[11]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)       tair.C  \n",
-       "   0.320039    -0.005435  \n",
-       "\n",
-       "\n",
-       "[[12]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)       rh.pct  \n",
-       "  0.1611813    0.0008809  \n",
-       "\n",
-       "\n",
-       "[[13]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "    (Intercept)  wind_sp.m_per_s  \n",
-       "        0.17998          0.01546  \n",
-       "\n",
-       "\n",
-       "[[14]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "         (Intercept)  irradiance.w_per_m.2  \n",
-       "           0.1404319             0.0002216  \n",
-       "\n",
-       "\n",
-       "[[15]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)         year  \n",
-       "   32.86976     -0.01622  \n",
-       "\n",
-       "\n",
-       "[[16]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)       sand_1  \n",
-       "  0.2020787    0.0008764  \n",
-       "\n",
-       "\n",
-       "[[17]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)       sand_2  \n",
-       "  0.2019219    0.0009185  \n",
-       "\n",
-       "\n",
-       "[[18]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)       sand_3  \n",
-       "   0.180021     0.003139  \n",
-       "\n",
-       "\n",
-       "[[19]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)       silt_1  \n",
-       "  0.2388903   -0.0004525  \n",
-       "\n",
-       "\n",
-       "[[20]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)       silt_2  \n",
-       "   0.328080    -0.001937  \n",
-       "\n",
-       "\n",
-       "[[21]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)       silt_3  \n",
-       "  0.1616057    0.0008818  \n",
-       "\n",
-       "\n",
-       "[[22]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)       clay_1  \n",
-       "  0.2182484   -0.0002147  \n",
-       "\n",
-       "\n",
-       "[[23]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)       clay_2  \n",
-       "  0.1907126    0.0007301  \n",
-       "\n",
-       "\n",
-       "[[24]]\n",
-       "\n",
-       "Call:\n",
-       "lm(formula = Formula, data = ndre_data)\n",
-       "\n",
-       "Coefficients:\n",
-       "(Intercept)       clay_3  \n",
-       "  0.2417031   -0.0009092  \n",
-       "\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lm_list"
    ]
@@ -508,12 +127,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looping through LM models and outputting graphs to check linear assumptions"
+    "#### Looping through LM models and Output Graphs Locally"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,71 +141,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] 1\n",
-      "[1] 2\n",
-      "[1] 3\n",
-      "[1] 4\n",
-      "[1] 5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "\"not plotting observations with leverage one:\n",
-      "  75, 171\"Warning message:\n",
-      "\"not plotting observations with leverage one:\n",
-      "  75, 171\""
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] 6\n",
-      "[1] 7\n",
-      "[1] 8\n",
-      "[1] 9\n",
-      "[1] 10\n",
-      "[1] 11\n",
-      "[1] 12\n",
-      "[1] 13\n",
-      "[1] 14\n",
-      "[1] 15\n",
-      "[1] 16\n",
-      "[1] 17\n",
-      "[1] 18\n",
-      "[1] 19\n",
-      "[1] 20\n",
-      "[1] 21\n",
-      "[1] 22\n",
-      "[1] 23\n",
-      "[1] 24\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for (i in 1:length(lm_list)){\n",
     "  print(i)\n",
-    "#   mypath <- file.path(\"C:\",\"Users\",\"Samir Patel\", \"Desktop\", \"Data 590 - Capstone I\", \"R Plots\", paste(\"myplot_\", colList[i], \".jpg\", sep = \"\"))\n",
-    "  mypath <- file.path(\"R Plots\", paste(\"myplot_\", colList[i], \".jpg\", sep = \"\"))\n",
+    "  mypath <- file.path(\"R Plots\", paste(\"myplot_\",\n",
+    "                                       col_list[i], \".jpg\", sep = \"\"))\n",
     "\n",
-    "  jpeg(file=mypath)\n",
-    "  mytitle = paste(\"Variable\", colList[i])\n",
-    "  par(mfrow=c(2,2))\n",
-    "  \n",
+    "  jpeg(file = mypath)\n",
+    "  mytitle <- paste(\"Variable\", col_list[i])\n",
+    "  par(mfrow = c(2, 2))\n",
+    "\n",
     "  lm_list[[i]]\n",
     "  plot(lm_list[[i]], main = mytitle)\n",
     "  dev.off()\n",
-    "  \n",
+    "\n",
     "}"
    ]
   }
