clean code and add comments

--- a/scripts/3_modeling/Deep Learning Time Series Analysis.ipynb
+++ b/scripts/3_modeling/Deep Learning Time Series Analysis.ipynb
@@ -26,34 +26,27 @@
     }
    ],
    "source": [
-    "from math import sqrt\n",
-    "from numpy import concatenate\n",
     "import numpy as np\n",
-    "from matplotlib import pyplot\n",
-    "import os\n",
-    "\n",
     "import pandas as pd\n",
+    "import os\n",
+    "import tensorflow as tf\n",
+    "import warnings\n",
     "\n",
-    "from scipy.stats import uniform\n",
-    "\n",
-    "from sklearn.preprocessing import MinMaxScaler, StandardScaler, OneHotEncoder, LabelEncoder\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
-    "\n",
-    "from keras.models import Sequential, Model\n",
+    "from keras import backend as K\n",
+    "from keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
     "from keras.layers import Activation, Input, Dense, Conv1D, MaxPooling1D, AveragePooling1D, Dropout, Flatten, GRU, LSTM\n",
     "from keras.layers.advanced_activations import ELU\n",
+    "from keras.models import Sequential, Model\n",
+    "from keras.optimizers import *\n",
     "from keras.utils import np_utils\n",
     "from keras.wrappers.scikit_learn import KerasRegressor\n",
-    "from keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
-    "from keras.optimizers import *\n",
-    "from keras import backend as K\n",
-    "K.set_image_dim_ordering('th')\n",
-    "\n",
-    "import tensorflow as tf\n",
+    "from math import sqrt\n",
+    "from matplotlib import pyplot\n",
+    "from numpy import concatenate\n",
     "from pymlx import *\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
+    "from scipy.stats import uniform\n",
+    "from sklearn.preprocessing import MinMaxScaler, StandardScaler, OneHotEncoder, LabelEncoder\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
@@ -62,8 +55,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "K.set_image_dim_ordering('th')\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def make_windowed(dataset, seq_length, horizon, feat_cols, resp_cols, region_col, split=0.2, resp_width=0,\n",
@@ -205,7 +212,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def mean_absolute_percentage_error(y_true, y_pred): \n",
@@ -423,7 +432,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "resp_cols = ['imputed']\n",
@@ -483,7 +494,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.random.seed(84)\n",
@@ -888,7 +901,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "results = sweep_stats(sweeper)\n",
@@ -908,7 +923,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('Forecasting out {0} days, with a {1} day window. '.format(horizon, sequence_length))\n",
@@ -963,7 +980,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = KerasRegressor(build_fn=create_model, shuffle=True, verbose=0)\n",
@@ -1028,7 +1047,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
