--- a/scripts/3_modeling/Neural Network Model.ipynb
+++ b/scripts/3_modeling/Neural Network Model.ipynb
@@ -3,34 +3,29 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from math import sqrt\n",
-    "from matplotlib import pyplot\n",
+    "import tensorflow as tf\n",
+    "import warnings\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
-    "\n",
-    "from pymlx import *\n",
-    "\n",
-    "from keras.models import Sequential, Model\n",
-    "from keras.layers import Activation, Input, Dense, Conv1D, MaxPooling1D, AveragePooling1D, Dropout, Flatten, GRU, LSTM\n",
-    "from keras.layers.advanced_activations import ELU\n",
-    "from keras.utils import np_utils\n",
-    "from keras.wrappers.scikit_learn import KerasRegressor\n",
-    "from keras.optimizers import *\n",
     "from keras import backend as K\n",
     "from keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
-    "\n",
-    "K.set_image_dim_ordering('th')\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "import tensorflow as tf\n",
+    "from keras.layers import Activation, Input, Dense, Conv1D, MaxPooling1D, AveragePooling1D, Dropout, Flatten, GRU, LSTM\n",
+    "from keras.layers.advanced_activations import ELU\n",
+    "from keras.models import Sequential, Model\n",
+    "from keras.optimizers import *\n",
+    "from keras.utils import np_utils\n",
+    "from keras.wrappers.scikit_learn import KerasRegressor\n",
+    "from math import sqrt\n",
+    "from matplotlib import pyplot\n",
+    "from pymlx import *\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
@@ -38,8 +33,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "K.set_image_dim_ordering('th')\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Define functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def compute_mae(model, x, y):\n",
@@ -85,53 +101,32 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# ndre_data = pd.read_csv('../HydroSatML/data/final_join_subbed_missing_soilM.csv')\n",
-    "# ndre_data_sub_30 = pd.read_csv('../HydroSatML/data/final_join_subbed_bare_soil.csv')\n",
-    "# ndre_data_sub_40 = pd.read_csv('../HydroSatML/data/final_join_subbed_bare_soil_40.csv')\n",
-    "# ndre_data_lag_40 = pd.read_csv('../data/final_join_subbed_bare_soil_with_lag_40_2.csv')\n",
-    "ndre_data_lag_40_EXACT = pd.read_csv('../data/final_join_subbed_bare_soil_with_lag_40_EXACT_NDRE.csv')"
+    "# load ndre data subsetted by field boundaries\n",
+    "ndre_data = pd.read_csv('../data/3_merged_data_for_models/final_join_subbed_missing_soilM.csv')\n",
+    "ndre_data_sub_30 = pd.read_csv('../data/3_merged_data_for_models/final_join_subbed_bare_soil.csv')\n",
+    "ndre_data_sub_40 = pd.read_csv('../data/3_merged_data_for_models/final_join_subbed_bare_soil_40.csv')\n",
+    "ndre_data_lag_40 = pd.read_csv('../data/3_merged_data_for_models/final_join_subbed_bare_soil_with_lag_40_2.csv')\n",
+    "ndre_data_lag_40_EXACT = pd.read_csv('../data/3_merged_data_for_models/final_join_subbed_bare_soil_with_lag_40_EXACT_NDRE.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['field', 'average_adjacent', 'stdev_adjacent', 'sensor', 'date',\n",
-       "       'sensor_full_name', 'depth_1', 'depth_2', 'depth_3', 'year',\n",
-       "       'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s',\n",
-       "       'irradiance.w_per_m.2', 'sand_1', 'sand_2', 'sand_3', 'silt_1',\n",
-       "       'silt_2', 'silt_3', 'clay_1', 'clay_2', 'clay_3', 'l3_depth_1',\n",
-       "       'l3_depth_2', 'l3_depth_3', 'l5_depth_1', 'l5_depth_2', 'l5_depth_3',\n",
-       "       'l7_depth_1', 'l7_depth_2', 'l7_depth_3', 'avg_soilM', 'avg_soilM_l3',\n",
-       "       'avg_soilM_l5', 'avg_soilM_l7', 'avg_clay', 'avg_sand', 'avg_silt'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ndre_data_lag_40.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "# choose columns to keep\n",
     "# keep_cols = ['avg_soilM', 'average_adjacent', 'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s', \n",
     "#              'irradiance.w_per_m.2', 'sand_1', 'sand_2', 'sand_3', 'silt_1', 'silt_2', 'silt_3', 'clay_1', \n",
     "#              'clay_2', 'clay_3']\n",
+    "\n",
     "keep_cols = ['avg_soilM', 'ndre_val', 'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s', \n",
     "             'irradiance.w_per_m.2', 'avg_clay', 'avg_sand', 'avg_silt']\n",
     "\n",
@@ -141,12 +136,16 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "# select features\n",
     "X = dataset.iloc[:,1:]\n",
     "X = X.values\n",
     "\n",
+    "# select responses\n",
     "y = dataset.iloc[:,0]\n",
     "y = y.values\n",
     "\n",
@@ -155,26 +154,25 @@
     "test_size = 0.20\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=seed)\n",
     "\n",
-    "#### normalize\n",
-    "\n",
+    "# calculate mean and standard deviation\n",
     "mean_X = X_train.mean(axis=0)\n",
     "std_X = X_train.std(axis=0)\n",
-    "\n",
-    "X_train = (X_train - mean_X) / std_X\n",
-    "X_test = (X_test - mean_X) / std_X\n",
-    "\n",
-    "X_train = X_train.astype('float32')\n",
-    "X_test = X_test.astype('float32')\n",
-    "\n",
     "mean_y = y_train.mean(axis=0)\n",
     "std_y = y_train.std(axis=0)\n",
     "\n",
+    "# normalize\n",
+    "X_train = (X_train - mean_X) / std_X\n",
+    "X_test = (X_test - mean_X) / std_X\n",
     "y_train = (y_train - mean_y) / std_y\n",
     "y_test = (y_test - mean_y) / std_y\n",
     "\n",
+    "# set dtype to float32 to reduce calculation time\n",
+    "X_train = X_train.astype('float32')\n",
+    "X_test = X_test.astype('float32')\n",
     "y_train = y_train.astype('float32')\n",
     "y_test = y_test.astype('float32')\n",
     "\n",
+    "# get number of features in feature space\n",
     "dim = X_train.shape[1]"
    ]
   },
@@ -188,7 +186,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.random.seed(84)\n",
@@ -269,7 +269,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = KerasRegressor(build_fn=create_NN_model, shuffle=True, verbose=0)\n",
@@ -293,20 +295,20 @@
     "lr = [10**k for k in range(-5, -1)]\n",
     "\n",
     "param_grid = dict(units1=units1,\n",
-    "                 units2=units2,\n",
-    "                 units3=units3,\n",
-    "                 units4=units4,\n",
-    "                 layers=layers,\n",
-    "                 epochs=epochs,\n",
-    "                 optimizer=optimizer,\n",
-    "                 activation=activation,\n",
-    "                 lr=lr,\n",
-    "                 schedule_decay=schedule_decay,\n",
-    "                 epsilon=epsilon,\n",
-    "                 rho=rho,\n",
-    "                 beta_1=beta_1,\n",
-    "                 beta_2=beta_2,\n",
-    "                 decay=decay)"
+    "                  units2=units2,\n",
+    "                  units3=units3,\n",
+    "                  units4=units4,\n",
+    "                  layers=layers,\n",
+    "                  epochs=epochs,\n",
+    "                  optimizer=optimizer,\n",
+    "                  activation=activation,\n",
+    "                  lr=lr,\n",
+    "                  schedule_decay=schedule_decay,\n",
+    "                  epsilon=epsilon,\n",
+    "                  rho=rho,\n",
+    "                  beta_1=beta_1,\n",
+    "                  beta_2=beta_2,\n",
+    "                  decay=decay)"
    ]
   },
   {
@@ -2704,7 +2706,7 @@
     "    params = results.iloc[-RUN,2:].to_dict()\n",
     "    # params\n",
     "\n",
-    "    ### Testing the best params\n",
+    "    # Testing the best params\n",
     "\n",
     "    np.random.seed(84)\n",
     "    tf.set_random_seed(84)\n",
@@ -2870,7 +2872,7 @@
     "print('Best Run Num: {0}'.format(RUN))\n",
     "params = results.iloc[-RUN,2:].to_dict()\n",
     "\n",
-    "### Testing the best params\n",
+    "# Testing the best params\n",
     "\n",
     "np.random.seed(84)\n",
     "tf.set_random_seed(84)\n",
@@ -2898,7 +2900,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mae_df_NN = pd.DataFrame({'mae_NN': test_results})\n",
@@ -2908,14 +2912,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "RUN = 1\n",
     "\n",
     "params = results.iloc[-RUN,2:].to_dict()\n",
     "\n",
-    "### Testing the best params\n",
+    "# Testing the best params\n",
     "\n",
     "np.random.seed(84)\n",
     "tf.set_random_seed(84)\n",
@@ -2957,7 +2963,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
