--- a/scripts/3_modeling/soilM_forecasting_extended_tune.ipynb
+++ b/scripts/3_modeling/soilM_forecasting_extended_tune.ipynb
@@ -16,34 +16,27 @@
     }
    ],
    "source": [
-    "from math import sqrt\n",
-    "from numpy import concatenate\n",
     "import numpy as np\n",
-    "from matplotlib import pyplot\n",
     "import os\n",
-    "\n",
     "import pandas as pd\n",
+    "import tensorflow as tf\n",
+    "import warnings\n",
     "\n",
-    "from scipy.stats import uniform\n",
-    "\n",
-    "from sklearn.preprocessing import MinMaxScaler, StandardScaler, OneHotEncoder, LabelEncoder\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
-    "\n",
-    "from keras.models import Sequential, Model\n",
+    "from keras import backend as K\n",
+    "from keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
     "from keras.layers import Activation, Input, Dense, Conv1D, MaxPooling1D, AveragePooling1D, Dropout, Flatten, GRU, LSTM\n",
     "from keras.layers.advanced_activations import ELU\n",
+    "from keras.models import Sequential, Model\n",
+    "from keras.optimizers import *\n",
     "from keras.utils import np_utils\n",
     "from keras.wrappers.scikit_learn import KerasRegressor\n",
-    "from keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
-    "from keras.optimizers import *\n",
-    "from keras import backend as K\n",
-    "K.set_image_dim_ordering('th')\n",
-    "\n",
-    "import tensorflow as tf\n",
+    "from math import sqrt\n",
+    "from matplotlib import pyplot\n",
+    "from numpy import concatenate\n",
     "from pymlx import *\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
+    "from scipy.stats import uniform\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "from sklearn.preprocessing import MinMaxScaler, StandardScaler, OneHotEncoder, LabelEncoder\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
@@ -67,13 +60,17 @@
     }
    ],
    "source": [
+    "K.set_image_dim_ordering('th')\n",
+    "warnings.filterwarnings('ignore')\n",
     "tf.__version__"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def make_windowed(dataset, seq_length, horizon, feat_cols, resp_cols, region_col, split=0.2, resp_width=0,\n",
@@ -215,7 +212,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def mean_absolute_percentage_error(y_true, y_pred): \n",
@@ -497,7 +496,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "resp_cols = ['imputed']\n",
@@ -558,7 +559,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.random.seed(84)\n",
@@ -1084,7 +1087,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1731,7 +1736,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.models import load_model\n",
@@ -2748,7 +2755,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -2769,7 +2778,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
