--- a/scripts/3_modeling/soilM_forecasting_tuning.ipynb
+++ b/scripts/3_modeling/soilM_forecasting_tuning.ipynb
@@ -16,33 +16,26 @@
     }
    ],
    "source": [
-    "from math import sqrt\n",
-    "from numpy import concatenate\n",
     "import numpy as np\n",
-    "from matplotlib import pyplot\n",
     "import os\n",
-    "\n",
     "import pandas as pd\n",
+    "import tensorflow as tf\n",
+    "import warnings\n",
     "\n",
-    "from scipy.stats import uniform\n",
-    "\n",
-    "from sklearn.preprocessing import MinMaxScaler, StandardScaler, OneHotEncoder, LabelEncoder\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
-    "\n",
-    "from keras.models import Sequential, Model\n",
+    "from keras import backend as K\n",
     "from keras.layers import Activation, Input, Dense, Conv1D, MaxPooling1D, AveragePooling1D, Dropout, Flatten, GRU, LSTM\n",
     "from keras.layers.advanced_activations import ELU\n",
+    "from keras.models import Sequential, Model\n",
+    "from keras.optimizers import *\n",
     "from keras.utils import np_utils\n",
     "from keras.wrappers.scikit_learn import KerasRegressor\n",
-    "from keras.optimizers import *\n",
-    "from keras import backend as K\n",
-    "K.set_image_dim_ordering('th')\n",
-    "\n",
-    "import tensorflow as tf\n",
+    "from math import sqrt\n",
+    "from matplotlib import pyplot\n",
+    "from numpy import concatenate\n",
     "from pymlx import *\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
+    "from scipy.stats import uniform\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "from sklearn.preprocessing import MinMaxScaler, StandardScaler, OneHotEncoder, LabelEncoder\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
@@ -66,13 +59,17 @@
     }
    ],
    "source": [
+    "K.set_image_dim_ordering('th')\n",
+    "warnings.filterwarnings('ignore')\n",
     "tf.__version__"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def make_windowed(dataset, seq_length, horizon, feat_cols, resp_cols, region_col, split=0.2, resp_width=0,\n",
@@ -214,7 +211,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def mean_absolute_percentage_error(y_true, y_pred): \n",
@@ -504,7 +503,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "resp_cols = ['imputed']\n",
@@ -563,7 +564,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.random.seed(84)\n",
@@ -937,6 +940,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -951,6 +955,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -2828,7 +2833,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -2849,7 +2856,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
